public/stylesheets/calendar.css
#calendar-container {
  display: table;
}

#calendar-container #scroll-back {
  background: lightgrey;
  padding: 5px;
  border-bottom: solid 4px white;
}

#calendar-container #scroll-back:hover {
  background: darkgrey;
}

#calendar-container #scroll-back #scroll-back-arrow {
  border-color: transparent transparent white;
  border-style: solid;
  border-width: 0 10px 10px;
  height: 0;
  width: 0;
  margin: auto;
}

#calendar-container #scroll-forward {
  background: lightgrey;
  padding: 5px;
  border-top: solid 4px white;
}

#calendar-container #scroll-forward:hover {
  background: darkgrey;
}

#calendar-container #scroll-forward #scroll-forward-arrow {
  border-color: white transparent;
  border-style: solid;
  border-width: 10px 10px 0;
  height: 0;
  width: 0;
  margin: auto;
}

#calendar {
  font-family: "Lucida Grande", sans-serif;
  border-collapse: collapse;
  font-size: 0.8em;
}

#calendar th {
  background: lightgrey;
  color: white;
  text-align: left;
  padding: 3px;
}

#calendar td {
  text-align: left;
  min-width: 1.5em;
  padding: 3px;
}

#calendar .month-name {
  text-align: left;
  background: lightblue;
  padding-right: 2em;
  border-right: solid 4px white;
  min-width: 5.5em;
}

#calendar .year {
  border-right: solid 4px white;
  min-width: 5.5em;
}

#calendar .first-of-month {
  background: lightblue;
}

#calendar .end-of-month {
  border-bottom: solid 2px lightblue;
}

#calendar .start-of-month {
  border-top: solid 2px lightblue;
}

